deploy/minikube/messaging/statefulset.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: messaging
  namespace: cecochat
  labels:
    app: messaging
spec:
  selector:
    matchLabels:
      app: messaging
  serviceName: messaging
  replicas: 2
  podManagementPolicy: Parallel
  template:
    metadata:
      name: messaging
      namespace: cecochat
      labels:
        app: messaging
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: messaging
          image: ceco.com/cecochat/messaging:0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 443
          startupProbe:
            httpGet:
              path: /startupz
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 2
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 2
          livenessProbe:
            httpGet:
              path: /livez
              port: 443
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /readyz
              port: 443
              scheme: HTTPS
            periodSeconds: 30
            timeoutSeconds: 5
          volumeMounts:
            - name: config
              mountPath: /bin/entrypoint.sh
              subPath: entrypoint.sh
              readOnly: true
          command:
            - /bin/entrypoint.sh
      volumes:
        - name: config
          configMap:
            name: messaging
            defaultMode: 0700
