deploy/minikube/messaging/service.yml
apiVersion: v1
kind: Service
metadata:
  name: messaging
  namespace: cecochat
  labels:
    app: messaging
spec:
  selector:
    app: messaging
  type: ClusterIP
  clusterIP: None
  ports:
    - port: 443
